apps/sprinkler/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sprinkler-web
  namespace: sprinkler
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: sprinkler-web
  template:
    metadata:
      labels:
        app: sprinkler-web
    spec:
      serviceAccountName: sprinkler
      containers:
        - name: web
          image: ghcr.io/drewpayment/sprinklergoose-web:06a27bd79fde2646d4296a4fa1b02c4639b8e458
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /sign-in
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /sign-in
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 192Mi
            limits:
              memory: 512Mi
