apps/sprinkler/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sprinkler-web
  namespace: sprinkler
spec:
  selector:
    app: sprinkler-web
  ports:
    - port: 3000
      targetPort: 3000
