apps/sprinkler/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sprinkler-http-route
  namespace: sprinkler
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sprinkler.hoytlabs.app
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames: ["sprinkler.hoytlabs.app"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sprinkler-web
          port: 3000
          weight: 1
